--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@testing-library/cypress": "^10.0.1",
-    "cypress": "^13.6.3"
+    "cypress": "^13.6.3",
+    "cypress-file-upload": "^5.0.8"
   }
 }
