--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "@testing-library/cypress": "^10.0.1",
-    "cypress": "^13.6.3",
+    "cypress": "^13.6.4",
     "cypress-file-upload": "^5.0.8"
   }
 }
